# flake8-tergeo

./: .flake8  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  REUSE.toml  index.html  pyproject.toml  renovate.json  search.html
.agents/skills/new-check/: SKILL.md
.clinerules/workflows/: new-check.md
.github/workflows/: docs.yml  main.yml  release.yml
.reuse/: dep5
_flake8_tergeo/: __init__.py  ast_util.py  base.py  global_options.py  hacks.py  interfaces.py  own_base.py  registry.py  type_definitions.py  wrapper_base.py
_flake8_tergeo/checks/: ast_assign.py  ast_bin_op.py  ast_call.py  ast_class_def.py  ast_func_def.py  ast_import.py  ast_name_or_attribute.py  ast_raise.py  ast_str.py  ast_subscript.py  dev_comments.py  docstyle.py  file_tokens.py  log_lint.py  parens.py  requirements.py  shared.py  wrappers.py
checks/: index.html
configuration/: index.html
docs/: checks.md  configuration.md  index.md  install.md  plugins.md
install/: index.html
news/: +36705446.feature.md  +3e09a342.change.md  +4ac3b597.fix.md  +57d22004.fix.md  +5e5955cf.feature.md  +66b23eb4.feature.md  +6a772f3b.feature.md  +7ae9a615.fix.md  +7f8a0c17.feature.md  +86b1194d.feature.md  +c6fbcf77.fix.md  +d1669312.feature.md  +d905f1d6.fix.md  +db3c54f6.feature.md  +e471e45f.feature.md  +e5205778.feature.md  +e9cc1b73.feature.md  +ef174d23.feature.md  +f3f5d431.change.md  +fbc1aa83.feature.md  +ftp142.feature.md
plugins/: index.html
search/: search_index.json
tests/: conftest.py  test_ast_util.py  test_base.py  test_own_base.py  test_wrapper_base.py  util.py
tests/checks/: test_ast_assign.py  test_ast_bin_op.py  test_ast_call.py  test_ast_class_def.py  test_ast_dict.py  test_ast_func_def.py  test_ast_imports.py  test_ast_name_or_attribute.py  test_ast_raise.py  test_ast_subscript.py  test_dev_comments.py  test_docstyle.py  test_parens.py  test_requirements.py  test_wrappers.py
tests/checks/test_ast_assign/: ftp144.txt
tests/checks/test_ast_bin_op/: ftp077.txt  ftp077_type.txt  ftp104.txt  ftp104_type.txt
tests/checks/test_ast_call/: ftp131.txt  ftp132.txt  ftp137.txt  ftp140.txt  ftp145.txt  ftp146.txt  ftp147.txt
tests/checks/test_ast_class_def/: ftp141.txt
tests/checks/test_ast_func_def/: ftp144.txt
tests/checks/test_ast_name_or_attribute/: ftp054.txt  ftp055.txt  ftp056.txt  ftp108.txt  ftp240.txt
tests/checks/test_ast_raise/: ftp142.txt  ftp143.txt
